# openssh-shim-windows

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  HISTORY.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  RELEASE.md
src/: scp.rc  scp_main.c  shim_core.c  shim_core.h  ssh.rc  ssh_main.c
tests/: smoke.ps1
